Update Nordpool API.